temporary fix for misaligned font on scaled displays

--- a/src/app/components/top-bar/top-bar.component.scss
+++ b/src/app/components/top-bar/top-bar.component.scss
@@ -57,7 +57,6 @@
 			font-size: 1.2rem;
             padding-left: 0.17rem;
 			margin: 0;
-			align-self: end;
 		}
 
 		.menu-entries {
